// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component should render with data and children case (Component children) 1`] = `
<StyledAvatarContainer
  className="LT-Avatar-Container"
  size="medium"
>
  <StyledChildrenContainer
    color="#FEFEFE"
    size="medium"
    type="circle"
  >
    <SimpleComponent />
    <StyledAvatarStatus
      size="medium"
      status="online"
    >
       
    </StyledAvatarStatus>
  </StyledChildrenContainer>
</StyledAvatarContainer>
`;

exports[`Avatar component should render with data and children case (String children) 1`] = `
<StyledAvatarContainer
  className="LT-Avatar-Container"
  size="xsmall"
>
  <StyledChildrenContainer
    color="#FEFEFE"
    size="xsmall"
    type="circle"
  >
    S
    <StyledAvatarStatus
      size="xsmall"
      status="live"
    >
       
    </StyledAvatarStatus>
  </StyledChildrenContainer>
</StyledAvatarContainer>
`;

exports[`Avatar component should render with data and circle case 1`] = `
<StyledAvatarContainer
  className="LT-Avatar-Container"
  size="small"
>
  <StyledImageContainer>
    <styled.img
      alt="An avatar image"
      size="small"
      sizes={null}
      src="http://i46.tinypic.com/sexbb8.png"
      srcSet={null}
      type="circle"
    />
    <ImageInnerDiv />
    <StyledAvatarStatus
      size="small"
      status="online"
    >
       
    </StyledAvatarStatus>
  </StyledImageContainer>
</StyledAvatarContainer>
`;

exports[`Avatar component should render without data 1`] = `
<StyledAvatarContainer
  className="LT-Avatar-Container"
  size="medium"
/>
`;
